<resources>
    <string name="app_name">AplikasiKasir</string>
    
    <!-- Concierge POS Labels -->
    <string name="welcome_back">Welcome Back</string>
    <string name="login_instruction">Please enter your credentials to access the terminal.</string>
    <string name="work_email">WORK EMAIL</string>
    <string name="security_key">SECURITY KEY</string>
    <string name="authorize_access">Authorize Access</string>
    <string name="reset_pin">RESET PIN</string>

    <!-- Default Navigation Drawer Strings (RESTORED) -->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>